--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!doctype html>
 
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
 
-  <title>Github page testi</title>
+  <title>Peruna on pyöreä</title>
 
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
-  <h1>Github pages testi</h1>
+	<div class="center">
+		<div class="image">
+		  <img src="peruna.png" alt="Peruna metsässä" height="450px"/>
+		</div>
+		<div class="centertext">
+		  <h1>Peruna on pyöreä</h1>
+		  <p>Peruna on soikea</p>
+		  <p>Peruna on ruoka ihan oikea</p>
+		</div>        
+	</div>
+	
+
 </body>
 
 </html>
